fixing glow effect on mobile

--- a/src/components/About.module.css
+++ b/src/components/About.module.css
@@ -117,5 +117,7 @@
   .softCircle {
     width: 100%;
     height: 100%;
+    top: 0%;
+    left: 50%;
   }
 }
